src/test/ui/const-generics/lazy-normalization/issue-71922.stderr
warning: the feature `const_generics` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/issue-71922.rs:1:12
   |
LL | #![feature(const_generics)]
   |            ^^^^^^^^^^^^^^
   |
   = note: `#[warn(incomplete_features)]` on by default
   = note: see issue #44580 <https://github.com/rust-lang/rust/issues/44580> for more information

error: constant expression depends on a generic parameter
  --> $DIR/issue-71922.rs:5:50
   |
LL | impl<const N: usize> Foo for [(); N] where Self: FooImpl<{ N == 0 }> {}
   |                                                  ^^^^^^^^^^^^^^^^^^^
   |
   = note: this may fail depending on what value the parameter takes

error: aborting due to previous error; 1 warning emitted

